# lotus_news_service

./: .env  Cargo.toml  build.sh  heroku.yml
migrations/: 20250823093945_create_users.sql  20250823170748_create_posts.sql  20250823170816_create_posts_down.sql  20250824165207_create_votes.sql  20250824165511_create_comments.sql  20250915144244_add_short_description_to_posts_table.sql  20250921090240_add_avatar_to_user.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/application/: error.rs  mod.rs  posts_service.rs  user_service.rs  vote_service.rs
src/application/utils/: mod.rs  profanity.rs  validation.rs
src/domain/: comments.rs  mod.rs  posts.rs  users.rs  votes.rs
src/infrastructure/: auth.rs  db.rs  mod.rs  observability.rs
src/infrastructure/repositories/: mod.rs  posts_repo.rs  user_repo.rs  vote_repo.rs
src/presentation/: auth.rs  mod.rs  post_handler.rs  user_handler.rs  vote_handler.rs
