[package]
name = "lotus-news-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
postgres = "0.19.10"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx-cli = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.86"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
headers = "0.4"

validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

url = "2"
tower_governor = "0.6"
prometheus = "0.13"

#SQLx with Postgres (runtime tokio + rustls)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }